# airless

./: .bumpversion.cfg  .flake8  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  context7.json  index.html  mkdocs.yaml  mkgendocs.yaml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/reusable-workflow/: package-validate.yml
.github/workflows/: documentation.yml  package-validate-reusable-workflow.yml  package-validate.yml  pypi-publish.yml  tests.yml
about/: index.html
airless/hook/google/: bigquery.py  storage.py
airless/operator/: base.py  error.py
airless/operator/file/: file.py  ftp.py
airless/operator/google/: storage.py
airless/utils/: decorators.py
api/airless-captcha/providers/: index.html
api/airless-core/dto/: index.html
api/airless-core/hook/: index.html
api/airless-core/operator/: index.html
api/airless-core/service/: index.html
api/airless-core/utils/: index.html
api/airless-email/hook/: index.html
contributing/: index.html
docs/: about.md  contributing.md  index.md  infrastucture.md  installation.md
docs/examples/: simple-example.md
docs/tutorials/: multistep.md  quickstart.md
example/gcp-getting-started/: README.md
infrastucture/: index.html
installation/: index.html
scripts/: generate_docs.py
search/: search_index.json
terraform/: function.tf  function_file_entrance.tf  pubsub.tf  storage.tf  variables.tf
tutorials/multistep/: index.html
tutorials/quickstart/: index.html
(+67 files in other folders)
