[metadata]
name = airless
version = 0.0.66.dev2

[options]
packages = find:
install_requires =
    google-cloud-storage==2.6.0
    google-cloud-pubsub==2.13.11
    google-cloud-bigquery==3.3.6
    google-cloud-secret-manager==2.12.6
    unidecode==1.3.4
    ndjson==0.3.1

[flake8]
# List of patterns to ignore
# It will exclude the files in the following directories
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    *.egg,
    temp

# Ignore error max line length
ignore = E501

# Maximum allowed line length
max-line-length = 120

# Cyclomatic complexity threshold
max-complexity = 15
